tests/src/frontend/typechecking/invalid/overridable_kclass2.sk
class Foo() {
  overridable const i: Int = 100;
}
